<resources>
    <string name="app_name">Book Finder</string>

    <string name="skip">Skip</string>
    <string name="book_finder">Book Finder</string>
    <string name="get_started">Get Started</string>
    <string name="share_your_favorite_books_with_your_family_and_friends">Share your favorite books with your family and friends</string>
    <string name="discovery_20_million_books_shelved_online">Discovery 20 Million Books Shelved Online</string>
    <string name="buy_and_sell_books_with_us">Buy And Sell Books With Us</string>
    <string name="welcome_n_choose_the_topics">Welcome \nChoose the topics</string>
    <string name="apply">Apply</string>
    <string name="search_books_authors">Search Books, Authors</string>
    <string name="our_top_picks">Our Top Picks</string>
    <string name="trending_books">Trending Books</string>
    <string name="best_share">Best share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>

    <string name="recently_viewed">Recently Viewed</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="topics">Topics</string>
    <string name="please_choose_topics">Please choose one or more topics from the list!</string>
    <string name="preparing_your_app_for_best_experience">Preparing your app for best experience!</string>
    <string name="internet_connection_message">Please connect to the internet and try again!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_checking_this_i_agree_to_terms_and_conditions_and_privacy_policy">By checking this I agree to terms and conditions and privacy policy</string>
    <string name="logging_in">Logging in</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="email_is_required">email is required</string>
    <string name="password_is_required">password_is_required</string>
    <string name="your_password_must_be_6_long">Password must be 6 characters or longer</string>
    <string name="signing_up">Signin up...</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="confirm_password_is_required">Confirm password is required</string>
    <string name="passwords_do_not_match">Passwords to not match</string>
    <string name="cannot_create_account_without_terms_conditions">Cannot create account without accepting terms and conditions</string>
    <string name="do_view_your_profile_sign_in_or_sign_up_if_you_do_not_have_an_account">Login or Sign up</string>
    <string name="log_out">Log out</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="page_count_d">Page count: %d</string>
    <string name="home">Home</string>
    <string name="type_something">Type something first</string>
    <string name="searching">Searching...</string>
    <string name="anonymous">Anonymous</string>
    <string name="checked_topics">Checked topics</string>
</resources>