<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/background_profile_images"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/space_normal"
            android:text="Gloria Smith"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="?actionBarSize"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_profile_picture"
            android:translationZ="@dimen/space_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_profile"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.5"
            android:layout_height="wrap_content"
            android:elevation="@dimen/space_normal"
            android:paddingEnd="@dimen/space_normal"
            android:paddingStart="@dimen/space_normal"
            android:text="@string/edit_profile"
            android:textSize="13sp"
            android:translationZ="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/space_small"
            app:layout_constraintTop_toBottomOf="@+id/name" />
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <ImageView
                    android:id="@+id/night_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_night_mode"
                    android:padding="@dimen/space_normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/night_icon"
                    android:layout_marginStart="@dimen/space_extra_large"
                    android:text="@string/night_mode"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="1dp">

                <ImageView
                    android:id="@+id/notifications_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notifications"
                    android:padding="@dimen/space_normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/notifications_icon"
                    android:layout_marginStart="@dimen/space_extra_large"
                    android:text="@string/notifications"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"/>

            </RelativeLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>