<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.BookActivity">

            <include layout="@layout/background_profile_images" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:maxLines="2"
                android:paddingHorizontal="16dp"
                android:text="Random book title"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/book_image_card"
                android:layout_width="130dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintDimensionRatio="1:1.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_title">

                <ImageView
                    android:id="@+id/book_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/fatherhood" />

            </com.google.android.material.card.MaterialCardView>

            <RatingBar
                android:id="@+id/book_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:translationX="-30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_image_card" />

            <ImageView
                android:id="@+id/favorite_book"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toBottomOf="@id/book_rating"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/book_rating" />

            <TextView
                android:id="@+id/book_authors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="By random author"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_rating"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/book_published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="12:12:12"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_rating" />

            <TextView
                android:id="@+id/book_page_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/page_count_d"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_authors" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/description"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_page_count" />

            <TextView
                android:id="@+id/book_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="24dp"
                android:paddingBottom="32dp"
                android:text="@string/lorem_ipsum_long"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>